2016-11-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.3-alpha02 final changes';git push
	git tag -a 4.6.3-alpha02 -m 'Version 4.6.3-alpha02 new features: ncclimo binary climatologies';git push --tags

	* Henry implemented ncra re-base when increment, not just basetime, changes between files

	* Make defaults for drc_prv sensible for bnr_flg and ncr_flg in ncclimo

2016-11-29  Charlie Zender  <zender@uci.edu>

	* Tested and working on FC25, no mods necessary, yay!

	* Print attribute CDL type as comment when dbg_lvl >= 1

2016-11-25  Charlie Zender  <zender@uci.edu>

	* Modify ncclimo to distinguish two types Extended climos: Meta	and Incremental

2016-11-22  Charlie Zender  <zender@uci.edu>

	* Change NCO_CNK_CSH_BYT_DFL to 0 since it is unsigned

2016-11-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.3-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.3-alpha01 final changes';git push
	git tag -a 4.6.3-alpha01 -m 'Version 4.6.3-alpha01 new features: bld/Makefile updates for ar, GSL;ncap2 chunking;';git push --tags

	* Add --cnk_csh_byt option and cache diagnostics

	* ncap2 no longer chunks all variables with asking, and follows command-line inputs

2016-11-18  Charlie Zender  <zender@uci.edu>

	* Revise and clarify ncwa memory usage in nco.texi

	* [NCO]_GSL_MINOR_VERSION rx fails in fmt_gsl_cls.cc due to new GSL 2.x numbering, breaks bld/Makefile

	* Compiling on grele shows netCDF 4.3.3.1 chokes on CDL naked constant ll, LL, ull, ULL syntax
	Remove such syntax from in_4.cdl to prevent breakage with bld/Makefile

2016-11-17  Charlie Zender  <zender@uci.edu>

	* Excise U from ARFLAGS on rhea/titan/yellowstone (RHEL6) since -U implemented in ar after ~2009

	* Clarify that rebasing feature only works on basetime in response to Dave Allured's question/comment

2016-11-16  Charlie Zender  <zender@uci.edu>

	* Merge spelling fixes from Sebastian Couwenberg
