@@ -122,8 +122,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @set doc-edition 4.6.3-alpha02
 @set copyright-years 1995--2016
 @set update-year 2016
-@set update-date 29 November 2016
-@set update-month November 2016
+@set update-date 5 December 2016
+@set update-month December 2016
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
 
